[package]
name = "quoridor-test-client"
version = "0.1.0"
edition = "2021"
description = "Worker client for distributed Quoridor engine testing"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
dirs = "5"

[profile.release]
lto = true
